--- a/main.html
+++ b/main.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tic Tac Toe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div class="container">
+        <div id="input-section">
+            <h1>Enter Player Names</h1>
+            <input type="text" id="player-1" placeholder="Player 1 Name">
+            <input type="text" id="player-2" placeholder="Player 2 Name">
+            <button id="submit">Submit</button>
+        </div>
+        <div id="game-section" style="display: none;">
+            <h1>Tic Tac Toe</h1>
+            <div class="message" id="turn-message"></div>
+            <div id="board" class="board">
+                <!-- Cells will be dynamically generated -->
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
-
 </html>
