--- a/main.html
+++ b/main.html
@@ -9,10 +9,10 @@
 <body>
     <div class="container">
         <div id="input-section">
-            <h1>Enter Player Names</h1>
-            <input type="text" id="player-1" placeholder="Player 1 Name">
-            <input type="text" id="player-2" placeholder="Player 2 Name">
-            <button id="submit">Submit</button>
+            <h1>TIC TAC TOE</h1>
+            <input type="text" id="player-1" placeholder="Enter Name">
+            <input type="text" id="player-2" placeholder="Enter Name">
+            <button id="submit">Start Game</button>
         </div>
         <div id="game-section" style="display: none;">
             <h1>Tic Tac Toe</h1>
