--- a/main.html
+++ b/main.html
@@ -18,7 +18,9 @@
 
         <button id="start-game">Start Game</button>
     </div>
+    <div class="message"></div>
+    <div class="board" id="board"></div>
 </div>
-<script src="./script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
