--- a/main.html
+++ b/main.html
@@ -1,26 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tic Tac Toe</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
-    <h1 class="title">TIC TAC TOE</h1>
-    <div class="form">
-        <label for="player1">Player 1</label>
-        <input type="text" id="player1" placeholder="enter name">
-
-        <label for="player2">Player 2</label>
-        <input type="text" id="player2" placeholder="enter name">
-
-        <button id="start-game">Start Game</button>
+  <div class="container">
+    <!-- Input Section -->
+    <div id="input-section">
+      <h1>Tic Tac Toe</h1>
+      <label for="player-1">Player 1:</label>
+      <input type="text" id="player-1" placeholder="Enter Player 1 Name">
+      <br>
+      <label for="player-2">Player 2:</label>
+      <input type="text" id="player-2" placeholder="Enter Player 2 Name">
+      <br>
+      <button id="submit">Submit</button>
     </div>
-    <div class="message"></div>
-    <div class="board" id="board"></div>
-</div>
-<script src="script.js"></script>
+
+    <!-- Game Board Section -->
+    <div id="game-section" style="display:none;">
+      <h1>Tic Tac Toe</h1>
+      <div class="message" id="message"></div>
+      <div class="board" id="board">
+        <!-- Cells for Tic Tac Toe -->
+        <div class="cell" id="1"></div>
+        <div class="cell" id="2"></div>
+        <div class="cell" id="3"></div>
+        <div class="cell" id="4"></div>
+        <div class="cell" id="5"></div>
+        <div class="cell" id="6"></div>
+        <div class="cell" id="7"></div>
+        <div class="cell" id="8"></div>
+        <div class="cell" id="9"></div>
+      </div>
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
