--- a/main.html
+++ b/main.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tic Tac Toe</title>
+  <title>TIC TAC TOE</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <!-- Input Section -->
     <div id="input-section">
-      <h1>Tic Tac Toe</h1>
+      <h1>TIC TAC TOE</h1>
       <label for="player-1">Player 1:</label>
       <input type="text" id="player-1" placeholder="Enter Player 1 Name">
       <br>
@@ -22,7 +22,7 @@
 
     <!-- Game Board Section -->
     <div id="game-section" style="display:none;">
-      <h1>Tic Tac Toe</h1>
+      <h1>TIC TAC TOE</h1>
       <div class="message" id="message"></div>
       <div class="board" id="board">
         <!-- Cells for Tic Tac Toe -->
@@ -38,6 +38,6 @@
       </div>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
