--- a/main.html
+++ b/main.html
@@ -38,6 +38,6 @@
       </div>
     </div>
   </div>
-  <script src="./script.js"></script>
+   <script type="text/javascript" src="./script.js">
 </body>
 </html>
